css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Lato', 'sans-serif';
    scroll-behavior: smooth;
}

.anchor {
    /*style for anchor-links*/
    position: absolute;
    top: -80px;
    left: 200px;
    display: block;
    width: 10px;
    height: 10px;
}

.hidden {
    display: none;
}

.header {
    position: sticky;
    top: 0;
    width: 100%;

    z-index: 10;
}

.header-container {
    display: flex;
    width: 940px;
    max-width: 940px;
    margin: 0 auto;
}

.wrapper {
    position: relative;
    width: 940px;
    max-width: 940px;
    margin: 0 auto;
}

.red-color-style {
    color: #f06c64;
}

.header {
    background-color: #2d303a;
    color: white;
}

.header__logo {
    font-weight: bold;
    font-size: 25px;
    margin-top: 29px;
    margin-bottom: 30px;
    letter-spacing: -0.3px;
}

.nav {
    font-size: 12px;
    font-weight: bold;
    margin-left: auto;
    display: flex;
    line-height: 6.32px;
    letter-spacing: -0.3px;
}

.nav__list {
    width: 371px;
    display: flex;
    justify-content: space-between;
    list-style: none;
    text-transform: uppercase;
    line-height: 6.32px;
    margin-top: 46px;
}

.nav__link {
    text-decoration: none;
    color: inherit;

    transition: 0.3s;
    -webkit-transition: 0.3s;
    -moz-transition: 0.3s;
    -ms-transition: 0.3s;
    -o-transition: 0.3s;
}

.nav__link:hover {
    text-decoration: underline;
    color: #f06c64;
}

.nav__list-item::after {
    content: '';
    display: inline-block;
    position: relative;
    top: -2px;
    left: 15px;
    width: 2px;
    height: 3px;
    background-color: #494e62;

    border-radius: 50%;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    -ms-border-radius: 50%;
    -o-border-radius: 50%;
}

.nav__list-item:last-child::after {
    content: '';
    display: none;
}

.header__decoration {
    background-color: #323746;
    height: 6px;
}
/*!!!!*/
.slider-section__test-wrapper {
    position: relative;
    width: 100%
}

.slider-section__slider-item {
    height: 594px;
    display: none;
    position: relative;
    animation: 1s ease-in-out;
    -webkit-animation: 1s ease-in-out;
}

.slider-section__slider-item--active {
    display: flex;
}

.slider-section__slider-item--next {
    display: flex;
    position: absolute;
    top: 0;
    width: 100%;
}

.slider-section__slider-item--to-left {
    animation-name: left;
}

.slider-section__slider-item--from-left {
    animation-name: right;
    animation-direction: reverse;
}

.slider-section__slider-item--to-right {
    animation-name: right;
}

.slider-section__slider-item--from-right {
    animation-name: left;
    animation-direction: reverse;
}

@keyframes left { /*!!!*/
    from {
      right: 0;
    }
    to {
        right: 100%;
    }
}
  
@keyframes right {
    from {
        left: 0;
      }
      to {
        left: 100%;
      }
}

.slider-section__slider-item--first-slide {
    background-color: #f06c64;
    transition: 5s;
    -webkit-transition: 5s;
    -moz-transition: 5s;
    -ms-transition: 5s;
    -o-transition: 5s;
}

.slider-section__slider-item--second-slide {
    background-color: #648BF0;
}

.slider-section__second-slide {}

.slider-section__wrapper {
    width: 797px;
    margin: 0 auto;
    position: relative;
}

#slide-one,
#slide-two {
    transition: 0.2s;
    -webkit-transition: 0.2s;
    -moz-transition: 0.2s;
    -ms-transition: 0.2s;
    -o-transition: 0.2s;
}

.slider-section__decorative-block {
    background-color: #ea676b;
    height: 6px;
}

.slider-section__image-one {
    background: url('../assets/phone-vertical.png') no-repeat;
    height: 483px;
    width: 240px;
    position: absolute;
    top: 53px;
    left: 1px;
    cursor: pointer;
}

.black-vertical {
    width: 194px;
    height: 339px;
    background-color: black;
    position: relative;
    top: 62px;
    left: 11px;
    border-radius: 2px;
    transition: 0.3s;
    -webkit-transition: 0.3s;
    -moz-transition: 0.3s;
    -ms-transition: 0.3s;
    -o-transition: 0.3s;
    -webkit-border-radius: 2px;
    -moz-border-radius: 2px;
    -ms-border-radius: 2px;
    -o-border-radius: 2px;
}

.black-horizontal {
    width: 339px;
    height: 194px;
    background-color: black;
    position: relative;
    top: 11px;
    left: 57px;
    border-radius: 2px;
    transition: 0.3s;
    -webkit-transition: 0.3s;
    -moz-transition: 0.3s;
    -ms-transition: 0.3s;
    -o-transition: 0.3s;
    -webkit-border-radius: 2px;
    -moz-border-radius: 2px;
    -ms-border-radius: 2px;
    -o-border-radius: 2px;
}

.slider-section__image-two {
    background: url('../assets/phone-horizontal.png') no-repeat;
    height: 240px;
    width: 484px;
    position: absolute;
    top: 174px;
    left: 314px;
    cursor: pointer;
}

.slider-section__image-one--second-slide {
    background: url('../assets/slider-phones.svg') no-repeat;
    height: 516px;
    width: 534px;
    position: absolute;
    left: 183px;
    top: 43px;
}

.slider-section__slider-left {
    display: inline-block;
    position: absolute;
    top: 279px;
    left: 200px;
    cursor: pointer;
}

.slider-section__slider-right {
    display: inline-block;
    position: absolute;
    top: 275px;
    right: 200px;
    cursor: pointer;

    transform: rotate(180deg);
    -webkit-transform: rotate(180deg);
    -moz-transform: rotate(180deg);
    -ms-transform: rotate(180deg);
    -o-transform: rotate(180deg);
}

.arrow {
    height: 32px;
    width: 22px;
    fill: #ca4549;

    transition: 0.2s;
    -webkit-transition: 0.2s;
    -moz-transition: 0.2s;
    -ms-transition: 0.2s;
    -o-transition: 0.2s;
}

.arrow:hover {
    fill: black;
}

.info-section {
    background-color: #f2f2f2;
    position: relative;
}

.info-section__title {
    color: #666d89;
    font-size: 30px;
    font-weight: 900;
    line-height: 17.86px;
    padding-top: 68px;
    margin-bottom: 27px;
    letter-spacing: -0.2px;
}
/* ... */

